style.css
/* ... */
@media screen and (max-width:768px) {
  .search-container {
    padding: 0 2vh;
  }
  
  .search-input {
    max-width: 100%;
    font-size: 14px;
  }
 
  .popup-box {
    flex-direction: column-reverse;
  }
  .main-heading {
    margin: 0 0vh 2vh 2vh;
    font-size:60px;
  }

  .decade-main img{
    height: unset;
    width: 100%;
  }
  #decades-container {
    display: none;
  }
  
  /* Hide scroll indicator on mobile */
  #decades-container::after {
    display: none;
  }
  .wrapper {
    display: block;
    margin: 4px 2vh 8px 2vh;
  }
  
  /* Make dropdown compact and clear */
  .wrapper .select-btn {
    height: 36px !important;
    padding: 0 10px !important;
    font-size: 13px !important;
    border-radius: 6px !important;
    background: rgba(255,255,255,0.1) !important;
  }
  
  .wrapper .select-btn::before {
    content: 'Jump to: ';
    opacity: 0.7;
    font-size: 12px;
    margin-right: 4px;
  }
  
  .wrapper .select-btn span:first-child {
    font-size: 14px !important;
    font-weight: 600 !important;
  }
  
  .wrapper .select-btn span:nth-child(2) {
    font-size: 16px !important;
  }

  .decade-intro {
    flex-direction: column;
    margin-left: 0;
    width: 100% !important;
    padding-left: 2vh !important;
    padding-right: 2vh !important;
  }
  #data-container p{
    margin: 4vw 0vw 4vw 0vw;
    font-size: 16px;
  }
  #data-container .decade-intro-p {
    font-size: 19px;
    line-height: 3vh;
    margin-top: 24px;
    min-width: 60vw;
  }

  .decade-intro-main h1 {
    margin: 2.4vw 0vw 2.4vw 0vw;
  }

  .decade-data {
    padding-bottom: 20px;
    margin-bottom: 10px;
    width: 100% !important;
    max-width: 100% !important;
    padding-left: 2vh !important;
    padding-right: 2vh !important;
  }

  .decade-main h2 {
    margin: 2vw 0vw 1.2vw 0vw;
  }
  
  .decade-main {
    min-width: 100% !important;
    width: 100% !important;
  }
  
  .decade-main div {
    padding: 2.4vw 0vw;
    font-size: 16px;
  }

  #data-container {
    margin-top: 80px;
    flex-direction: column;
    padding-top: 10px;
    overflow-x: hidden !important;
    overflow-y: auto !important;
    width: 100% !important;
    height: calc(100vh - 80px) !important;
  }
  .decade-intro-img {
    width: 100%;
  }

  .popup-box h3 {
    font-size: 15px;
    line-height: 22px;
    text-align: justify;
    padding: 0px 0px;
  }

  .popup-img {
    width: 0px;
    height:0px;
    margin-right: 0px;
    margin-left: 0px;
    margin-top: 0px;
    margin-bottom: 0px;
  }

  
  .header {
    position: sticky;
  }

  .decade-intro>* {
    margin-top: 34%;
  }

  .options li a {
     width: 100%;
  }
}

@media screen and (max-width: 580px) {
  .decade-intro>* {
    margin-top: 46%;
  }
}

@media screen and (max-width: 480px) {
  .decade-intro>* {
    margin-top: 60%;
  }
  
  .search-label {
    font-size: 12px;
  }
}

/* Focus visible polyfill */
:focus:not(:focus-visible) {
  outline: none;
}

:focus-visible {
  outline: 2px solid #118acb;
  outline-offset: 4px;
}

